Fix problem on mobile list of wine

--- a/src/components/ProductWithImage/productwithimage.scss
+++ b/src/components/ProductWithImage/productwithimage.scss
@@ -142,6 +142,14 @@
 }
 
 @media screen and (max-width: 789px) {
+  .productWithImage__content {
+    margin: 20px 0;
+    height: auto;
+
+    .text__content {
+      padding: 10px 20px;
+    }
+  }
   .productWithImage__content_left {
     grid-template-columns: 20% 75% auto auto;
 
